--- a/interakcja_zal/pubspec.yaml
+++ b/interakcja_zal/pubspec.yaml
@@ -25,10 +25,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +42,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  fonts:
+   - family:  MyFlutterApp
+     fonts:
+      - asset: assets/fonts/MyFlutterApp.ttf
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
