--- a/interakcja_zal/pubspec.yaml
+++ b/interakcja_zal/pubspec.yaml
@@ -46,6 +46,8 @@ flutter:
     - family: Poppins
       fonts:
         - asset: fonts/Poppins-Regular.ttf
+        - asset: fonts/Poppins-SemiBold.ttf
+          weight: 600
         - asset: fonts/Poppins-Bold.ttf
           weight: 700
         - asset: fonts/Poppins-Italic.ttf
