--- a/interakcja_zal/pubspec.yaml
+++ b/interakcja_zal/pubspec.yaml
@@ -39,6 +39,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  uses-material-design: true
+
   fonts:
     - family: MyFlutterApp
       fonts:
@@ -53,6 +55,7 @@ flutter:
         - asset: fonts/Poppins-Italic.ttf
           weight: 300
           style: italic
+
     # The following line ensures that the Material Icons font is
     # included with your application, so that you can use the icons in
     # the material Icons class.
